--- a/nutrition.html
+++ b/nutrition.html
@@ -7,9 +7,11 @@
 </head>
 <body>
 
-<div class="card" id="result"></div>
+<div class="book">
+  <div class="page active" id="nutritionPage"></div>
 
-<button onclick="goMeals()">🍱 Bữa ăn cụ thể</button>
+  <button onclick="toMeals()">🍽 Bữa ăn cụ thể</button>
+</div>
 
 <script src="script.js"></script>
 </body>
